2.0.0-SNAPSHOT instead and improving Title classes